# aiui

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  agents.md  aiui.sh  config.json  deploy.sh  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  pyproject.toml  server.py  start.sh  vite.config.js
.pi/skills/: rodney
.pi/skills/generate-image/: SKILL.md  generate-image  install.sh
scripts/: hash-passphrase.js
server/: app.py  auth.js  event-bus.js  index.js  mime.js  mime.test.js  pi-session.js  quota.js  sandbox.js  sandbox.test.js  seed.py
shared/: entry.js  entry.test.js
src/: App.jsx  index.css
src/components/: ChatInput.jsx  CommandPanel.jsx  EmptyState.jsx  FolderExpansion.jsx  InputBar.jsx  LoginModal.jsx  MainArea.jsx  Message.jsx  ModelPicker.jsx  ReleaseNotes.jsx  SettingsModal.jsx  SettingsPanel.jsx  Sidebar.jsx  StatsFooter.jsx  StreamEntry.jsx  ThinkingPicker.jsx
src/hooks/: useAgentEvents.js  useAttachments.js  useHashRoute.js  useMention.js  useModels.js  useSlashMenu.js  useStreamChat.js
src/lib/: api.js  compose.js  compose.test.js  icons.jsx  models.js  models.test.js  utils.js  utils.jsx
tests/: conftest.py  test_tools.py
